# Vividarium

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  main.py  requirements.txt
.github/workflows/: release.yml
app/: __init__.py  runtime_paths.py
app/api/: README.md  local_paths.py  main.py  map.py  operations.py  photos.py  photos_taxa_mapping.py  taxa.py  utils.py
app/map/: README.md  __init__.py  service.py
app/operations/: __init__.py  manager.py
app/photos/: README.md  __init__.py  db.py  filename_parser.py  scanner.py  service.py
app/photos_taxa_mapping/: README.md  __init__.py  db.py  service.py
app/taxa/: README.md  __init__.py  db.py  parser.py  service.py
apps/desktop/: README.md  index.html  package-lock.json  package.json  vite.config.ts
apps/desktop/src/: bridge.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
apps/desktop/src-tauri/capabilities/: desktop.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: commands.rs  lib.rs  main.rs  media.rs  paths.rs  state.rs
apps/desktop/src/components/: NavButton.tsx  (+2 more)
crates/phytoindex-core/: Cargo.toml
crates/phytoindex-core/src/: db.rs  error.rs  export.rs  lib.rs  mapping.rs  models.rs  photos.rs  taxa.rs  taxonomy.rs
crates/phytoindex-core/src/taxonomy/: actions.rs  page.rs  query.rs  update.rs  view.rs
docs/: BUILDING.md  PHOTOS.md  TAXONOMY.md
frontend/: README.md  package-lock.json  package.json
frontend/src/: App.tsx  api.ts  styles.css
frontend/src/components/: photo.tsx  status.tsx
frontend/src/lib/: browserUtils.ts  photoUtils.ts  storage.ts  taxonUtils.ts
packaging/: PhytoIndex.windows.spec
scripts/: build-macos.sh  build-windows.ps1  build_windows.bat
(+44 files in other folders)
