[package]
name = "phytoindex-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
base64 = "0.22"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
csv = "1.3"
image = { version = "0.25", default-features = false, features = ["bmp", "gif", "jpeg", "png", "tiff", "webp"] }
kamadak-exif = "0.6"
regex = "1.11"
rusqlite = { version = "0.37", features = ["bundled", "session"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
walkdir = "2.5"

[dev-dependencies]
tempfile = "3"
